--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.3.0
   firebase_storage: ^11.0.16
   cloud_firestore: ^4.4.5
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
 
