--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.0.16
   cloud_firestore: ^4.4.5
   firebase_database: ^10.0.16
+  sqflite: ^2.2.6
   flutter:
     sdk: flutter
 
