--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cloud_firestore: ^4.4.5
   firebase_database: ^10.0.16
   sqflite: ^2.2.6
+  flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.4.0
   flutter:
     sdk: flutter
 
