--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite: ^2.2.6
   flutter_local_notifications: ^13.0.0
   firebase_messaging: ^14.4.0
+  google_maps_flutter: ^2.2.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
   flutter:
     sdk: flutter
 
